scss/_config.scss
$primary-color: #444444;
$secondary-color: #4ddbff;
$font-primary: 'Montserrat', sans-serif;
$font-secondary: 'Open Sans', sans-serif;
$show-home-image: true;
$home-image: url(../img/applelow.jpgS);
$background-opacity: 0.6;

/* mixins */
@mixin easeOut {
  transition: all 0.4s ease-out;
}

@mixin background {
  @if $show-home-image {
    &#bg-image {
      background: $home-image;
      background-attachment: fixed;
      background-size: cover;
      background-position: left;
    }

    &:after {
      content: '';
      position: absolute;
      top: 0;
      right: 0;
      width: 100%;
      height: 100%;
      z-index: -1;
      background: rgba(lighten($primary-color, 4), $background-opacity);
    }
  }
}

/* set text color function */
@function set-text-color($color) {
  @if (lightness($color) > 40) {
    @return #000000;
  } @else {
    @return #ffffff;
  }
}

/* media query mixins */

@mixin mediaSm {
  @media screen and (max-width: 570px) {
    @content;
  }
}
@mixin mediaMd {
  @media screen and (max-width: 700px) {
    @content;
  }
}
@mixin mediaLg {
  @media screen and (min-width: 701px) and (max-width: 1170px) {
    @content;
  }
}
@mixin mediaXl {
  @media screen and (min-width: 1171px) {
    @content;
  }
}

